--- a/pom.xml
+++ b/pom.xml
@@ -48,4 +48,10 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>nexus-test-releases</id> <!-- Match this ID with the settings.xml -->
+            <url>http://3.80.139.60:8081/repository/nexus-jenkins-integration/</url>
+        </repository>
+    </distributionManagement>
 </project>
